--- a/firefox-ios/nimbus-features/messaging/messaging-evergreen-messages.fml.yaml
+++ b/firefox-ios/nimbus-features/messaging/messaging-evergreen-messages.fml.yaml
@@ -59,7 +59,7 @@ import:
                 surface: microsurvey
                 style: MICROSURVEY
                 trigger-if-all:
-                  - NEVER
+                  - VIEWED_HOMEPAGE
                 title: Microsurvey/Microsurvey.Prompt.TitleLabel.v127
                 text: "How satisfied are you with printing in Firefox?" # Should not show this message if this is nil
                 button-label: Microsurvey/Microsurvey.Prompt.TakeSurveyButton.v127
