--- a/bitrise.yml
+++ b/bitrise.yml
@@ -75,8 +75,7 @@ workflows:
         inputs:
         - destination: platform=iOS Simulator,name=iPhone 15,OS=17.5
         - xcodebuild_options: '"COMPILER_INDEX_STORE_ENABLE=NO"
-            "CODE_SIGN_IDENTITY=" "CODE_SIGNING_REQUIRED=NO" "CODE_SIGNING_ALLOWED=NO"
-            "-parallel-testing-enabled" "YES" "-parallel-testing-worker-count" "2"'
+            "CODE_SIGN_IDENTITY=" "CODE_SIGNING_REQUIRED=NO" "CODE_SIGNING_ALLOWED=NO"'
         - xctestrun: "/Users/vagrant/git/DerivedData/Build/Products/Fennec_UnitTest_iphonesimulator17.5-arm64.xctestrun"
         - maximum_test_repetitions: 2
     - save-spm-cache@1:
