move fallback image to config

--- a/firefox-ios/nimbus-features/messaging/messaging.fml.yaml
+++ b/firefox-ios/nimbus-features/messaging/messaging.fml.yaml
@@ -193,8 +193,8 @@ objects:
     fields:
       icon:
         description: The asset name in our bundle used as the icon shown in the survey.
-        type: Option<Image>
-        default: nil
+        type: Image
+        default: lightbulbLarge
       options:
         description: The list of survey options to present to the user.
         type: List<Text>
