--- a/firefox-ios/nimbus.fml.yaml
+++ b/firefox-ios/nimbus.fml.yaml
@@ -23,6 +23,7 @@ include:
   - nimbus-features/generalFeatures.yaml
   - nimbus-features/gleanServerKnobs.yaml
   - nimbus-features/homescreenFeature.yaml
+  - nimbus-features/menuRefactorFeature.yaml
   - nimbus-features/messagingFeature.yaml
   - nimbus-features/microsurveyFeature.yaml
   - nimbus-features/nightModeFeature.yaml
