--- a/firefox-ios/nimbus-features/messaging/messaging-firefox-ios.fml.yaml
+++ b/firefox-ios/nimbus-features/messaging/messaging-firefox-ios.fml.yaml
@@ -37,7 +37,7 @@ import:
               ALLOWED_TIPS_NOTIFICATIONS: "allowed_tips_notifications"
 
               # Behavioral Targeting Events
-              VIEWED_HOMEPAGE:  "'homepage_viewed'|eventLastSeen('Hours') <= 24"
+              SECOND_HOMEPAGE_VIEW:  "'homepage_viewed'|eventSum('Years', 4, 0) >= 2"
 
             actions:
               OPEN_SETTINGS:                      ://deep-link?url=settings/general
