--- a/.github/workflows/focus-ios-smoke.yml
+++ b/.github/workflows/focus-ios-smoke.yml
@@ -15,7 +15,7 @@ env:
 jobs:
     compile:
         name: Compile
-        runs-on: macos-14-large
+        runs-on: macos-14-xlarge
         steps:
             - name: Check out source code
               uses: actions/checkout@v4.1.7
@@ -49,7 +49,7 @@ jobs:
                 retention-days: 2          
     run-tests:
         name: Run tests
-        runs-on: macos-14-large
+        runs-on: macos-14-xlarge
         needs: compile
         strategy:
             fail-fast: false
