--- a/firefox-ios/nimbus-features/toolbarRefactorFeature.yaml
+++ b/firefox-ios/nimbus-features/toolbarRefactorFeature.yaml
@@ -21,9 +21,14 @@ features:
         default: false
       unified_search:
         description: >
-          Enables the unified search feature
+          Enables the unified search feature.
         type: Boolean
         default: false
+      layout:
+        description: >
+          The type of layout of the toolbars.
+        type: Option<ToolbarLayoutType>
+        default: baseline
         
     defaults:
       - channel: beta
@@ -32,10 +37,22 @@ features:
           unified_search: false
           one_tap_new_tab: false
           navigation_hint: false
+          layout: baseline
       - channel: developer
         value:
           enabled: true
           unified_search: false
           one_tap_new_tab: false
           navigation_hint: true
+          layout: baseline
 
+enums:
+  ToolbarLayoutType:
+    description: The type of toolbar layout.
+    variants:
+      baseline:
+        description: The default layout of the toolbars.
+      version1:
+        description: Shows the share and tabs button in the navigation toolbar. The menu button is displayed in the address toolbar.
+      version2:
+        description: Shows the tabs and menu button in the navigation toolbar. The share button is displayed in the address toolbar.
