--- a/firefox-ios/nimbus-features/toolbarRefactorFeature.yaml
+++ b/firefox-ios/nimbus-features/toolbarRefactorFeature.yaml
@@ -24,6 +24,11 @@ features:
           Enables the unified search feature.
         type: Boolean
         default: false
+      swiping_tabs:
+        description: >
+          Enables swipe gestures to switch between browser tabs.
+        type: Boolean
+        default: false
       layout:
         description: >
           The type of layout of the toolbars.
@@ -37,6 +42,7 @@ features:
           unified_search: false
           one_tap_new_tab: false
           navigation_hint: false
+          swiping_tabs: false
           layout: baseline
       - channel: developer
         value:
@@ -44,6 +50,7 @@ features:
           unified_search: false
           one_tap_new_tab: false
           navigation_hint: true
+          swiping_tabs: false
           layout: baseline
 
 enums:
