--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -1538,6 +1538,51 @@ shopping.settings:
     send_in_pings:
       - metrics
 
+# Metrics related to the App Settings
+settings.app_icon:
+  selected:
+    type: event
+    description: |
+      Records when the user changes their app icon in the app settings.
+    extra_keys:
+      name:
+        type: string
+        description: |
+          The name of the app icon the user has selected.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11473
+    data_reviews:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11473
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-06-01"
+    metadata:
+      tags:
+        - AppIconSelection
+        - Settings
+
+# Settings main menu
+settings.main_menu:
+  option_selected:
+    type: event
+    description: |
+      Records when the user taps an option in the app settings main menu.
+    extra_keys:
+      option:
+        type: string
+        description: |
+          The option type selected from the settings main menu.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11473
+    data_reviews:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11473
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-06-01"
+    metadata:
+      tags:
+        - Settings
+
 # Key Commands
 key_commands:
   press_key_command_action:
