--- a/firefox-ios/Client/tags.yaml
+++ b/firefox-ios/Client/tags.yaml
@@ -11,6 +11,12 @@
 ---
 $schema: moz://mozilla.org/schemas/glean/tags/1-0-0
 
+AppIconSelection:
+  description: Corresponds to the feature where users can change their default app icon in the settings.
+
+Settings:
+  description: Corresponds to all the options encompassed in the app's settings screens.
+
 TopSites:
   description: Corresponds to the [Feature:TopSites](https://mozilla-hub.atlassian.net/browse/FXIOS-3464)
     label on GitHub.
