update nimbus ping to send client_id

--- a/firefox-ios/Client/pings.yaml
+++ b/firefox-ios/Client/pings.yaml
@@ -150,7 +150,7 @@ usage-deletion-request:
 nimbus:
   description: |
     This ping is submitted by Nimbus code after the enrollment workflow has completed.
-  include_client_id: false
+  include_client_id: true
   send_if_empty: true
   bugs:
     - https://mozilla-hub.atlassian.net/browse/EXP-5154
