--- a/firefox-ios/nimbus-features/toolbarRefactorFeature.yaml
+++ b/firefox-ios/nimbus-features/toolbarRefactorFeature.yaml
@@ -51,7 +51,7 @@ features:
           one_tap_new_tab: false
           navigation_hint: true
           swiping_tabs: false
-          layout: baseline
+          layout: version1
 
 enums:
   ToolbarLayoutType:
