--- a/firefox-ios/sticker/Info.plist
+++ b/firefox-ios/sticker/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleShortVersionString</key>
-	<string>138.0</string>
+	<string>$(APP_VERSION)</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>CFBundleIdentifier</key>
